# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/*"]
default-members = ["lib/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Arto Bendiken"]
edition = "2021"
rust-version = "1.81"
description = "Getenv.rs"
#documentation = "https://docs.rs/getenv/"
readme = true
homepage = "https://github.com/dryrust/getenv.rs"
repository = "https://github.com/dryrust/getenv.rs"
license = "Unlicense"
keywords = ["env", "environment"]
categories = ["command-line-interface", "config"]
publish = true

[workspace.dependencies]
getenv = { path = "lib/getenv" }

[patch.crates-io]
getenv = { path = "lib/getenv" }
